--- a/prediction-ui/templates/input_form_page.html
+++ b/prediction-ui/templates/input_form_page.html
@@ -3,22 +3,35 @@
     <title>Spotify Churn Prediction</title>
 </head>
 <body>
-<form action="/checkchurn" method="POST">
-    <h1>Predict Spotify User Churn</h1>
+<form action="/checkchurn" method="post">
+  <label>Age:</label>
+  <input type="number" name="age"><br>
 
-    <label for="age">User Age:</label>
-    <input type="number" id="age" name="age" required><br>
+  <label>Listening Time:</label>
+  <input type="number" name="listening_time"><br>
 
-    <label for="subscription_length">Subscription Length (months):</label>
-    <input type="number" id="subscription_length" name="subscription_length" required><br>
+  <label>Songs Played per Day:</label>
+  <input type="number" name="songs_played_per_day"><br>
 
-    <label for="plays_per_day">Average Plays per Day:</label>
-    <input type="number" id="plays_per_day" name="plays_per_day" required><br>
+  <label>Skip Rate:</label>
+  <input type="number" name="skip_rate"><br>
 
-    <label for="gender_Male">Gender (1=Male, 0=Female):</label>
-    <input type="number" id="gender_Male" name="gender_Male" min="0" max="1" required><br>
+  <label>Ads Listened per Week:</label>
+  <input type="number" name="ads_listened_per_week"><br>
 
-    <p><input type="submit" value="Predict Churn"></p>
+  <label>Gender (Male=1, Other=0):</label>
+  <input type="number" name="gender_Male"><br>
+
+  <label>Country (e.g., US=1):</label>
+  <input type="number" name="country_US"><br>
+
+  <label>Subscription Type (Premium=1):</label>
+  <input type="number" name="subscription_type_Premium"><br>
+
+  <label>Device Type (Mobile=1):</label>
+  <input type="number" name="device_type_Mobile"><br>
+
+  <input type="submit" value="Predict Churn">
 </form>
 </body>
 </html>
